--- a/org/pages/publications.org
+++ b/org/pages/publications.org
@@ -52,7 +52,7 @@
 
 *Boisseaux M., D. Krebber, B. Burban, A. Casado-Garcia, J. Cazal1, J. Clément, G. Derroire, C. Fortunel, J.-Y. Goret, J. Heras, G. Jaouen, C. Scoffoni, G. Vieilledent, J. Vleminckx, S. Coste, H. Schimann, and C. Stahl.* Local habitat cannot be explained by leaf chemical and water-related traits in neotropical trees. /Functional Ecology/.
 
-*Yang H., S. Wang, R. Son, H. Lee, V. Benson, W. Zhang, Y. Zhang, Y. Zhang, J. Kattge, G. Boenisch, D. Schepaschenko, Z. Karaszewski, S. Krzysztof, A. Moreno-Martínez, C. Nabais, P. Birnbaum, G. Vieilledent, U. Weber, and N. Carvalhais*. Global patterns of tree wood density. /Global Change Biology/
+*Yang H., S. Wang, R. Son, H. Lee, V. Benson, W. Zhang, Y. Zhang, Y. Zhang, J. Kattge, G. Boenisch, D. Schepaschenko, Z. Karaszewski, S. Krzysztof, A. Moreno-Martínez, C. Nabais, P. Birnbaum, G. Vieilledent, U. Weber, and N. Carvalhais*. Global patterns of tree wood density. /Global Change Biology/. {{{doi(10.1111/gcb.17224)}}}. {{{pdf(Yang2024-GCB.pdf)}}} {{{altm(10.1111/gcb.17224)}}}
 
 *Neugarten R., R. Rasolofoson, C. Barrett, G. Vieilledent, and A. Rodewald* The effect of a political crisis on performance of community- and state-managed forests in Madagascar. /Nature Communications/.
 
