Updating Camille's article

--- a/org/blog/news.org
+++ b/org/blog/news.org
@@ -87,7 +87,7 @@ We spent a fantastic day collecting plant material in the [[https://www.province
 :END:
 
 *Jan. 11, 2024*\\
-The second [[doi:10.1101/2022.08.06.503032][article]] of Camille's PhD has been [[doi:10.24072/pci.ecology.100466][recommended]] by Matthieu Barbier for [[https://ecology.peercommunityin.org/][PCI Ecology]] based on reviews by Simon Blanchet and Bart Haegeman. This article has the following title^{\star} "Beyond variance: simple random distributions are not a good proxy for intraspecific variability in systems with environmental structure". In nature, a high proportion of intraspecific variability can emerge from unmeasured environmental variables varying in space and time, as shown in the [[doi:10.1101/2022.03.16.484259][first article of Camille's PhD]]. In this second article, we show that when individual performance are determined by a varying multidimensional environment (15 variables in our case), the fact of representing intraspecific variability with a variance around species means, when several dimensions of the environment are not observed, leads to incorrect simulations of community dynamics in term of number of coexisting species and community composition. When a variance is used to represent intraspecific variability, conspecific individuals (i.e. individuals from the same species) have different performance in the same environment. On the contrary, when observed intraspecific variability emerges from a variable environment in multiple dimensions, this does not imply that conspecific individuals are intrinsically different. In this case, conspecific individuals have identical performance in the same environment. This difference between random and structured intraspecific variability has large consequences on community dynamics in community models. When individual variability is random, community dynamics is stochastic, leading to an ecological drift and the extinction of many species. On the contrary, when intraspecific variability is the result of the variation of the environment in multiple dimensions, each species is able to outperform the other at some sites with particular environmental conditions, thus allowing the coexistence of a high number of species. This important distinction and the results of our study have been very well summarized in Matthieu Barbier's [[doi:https://doi.org/10.24072/pci.ecology.100466][recommendation]] untitled "Two paradigms for intraspecific variability".
+The second [[doi:10.24072/pcjournal.360][article]] of Camille's PhD has been [[doi:10.24072/pci.ecology.100466][recommended]] by Matthieu Barbier for [[https://ecology.peercommunityin.org/][PCI Ecology]] based on reviews by Simon Blanchet and Bart Haegeman and published in /PC Journal/, section Ecology. This article has the following title^{\star} "Beyond variance: simple random distributions are not a good proxy for intraspecific variability in systems with environmental structure". In nature, a high proportion of intraspecific variability can emerge from unmeasured environmental variables varying in space and time, as shown in the [[doi:10.1101/2022.03.16.484259][first article of Camille's PhD]]. In this second article, we show that when individual performance are determined by a varying multidimensional environment (15 variables in our case), the fact of representing intraspecific variability with a variance around species means, when several dimensions of the environment are not observed, leads to incorrect simulations of community dynamics in term of number of coexisting species and community composition. When a variance is used to represent intraspecific variability, conspecific individuals (i.e. individuals from the same species) have different performance in the same environment. On the contrary, when observed intraspecific variability emerges from a variable environment in multiple dimensions, this does not imply that conspecific individuals are intrinsically different. In this case, conspecific individuals have identical performance in the same environment. This difference between random and structured intraspecific variability has large consequences on community dynamics in community models. When individual variability is random, community dynamics is stochastic, leading to an ecological drift and the extinction of many species. On the contrary, when intraspecific variability is the result of the variation of the environment in multiple dimensions, each species is able to outperform the other at some sites with particular environmental conditions, thus allowing the coexistence of a high number of species. This important distinction and the results of our study have been very well summarized in Matthieu Barbier's [[doi:https://doi.org/10.24072/pci.ecology.100466][recommendation]] untitled "Two paradigms for intraspecific variability".
 
 \star The title refers to the article by [[doi:10.1016/j.tree.2011.11.014][Violle et al. 2012]] "The return of the variance: intraspecific variability in community ecology".
 
@@ -95,7 +95,7 @@ The second [[doi:10.1101/2022.08.06.503032][article]] of Camille's PhD has been 
 #+caption: *Effect of using a random variance around species means on the number of coexisting species.* PK is the Perfect Knowledge model with 15 environmental variables.
 [[file:images/blog/Girard-Tercieux2024-Peer_Community_Journal.jpg]]
 
-*Girard-Tercieux C., G. Vieilledent, A. T. Clark, J. S. Clark, B. Courbaud, C. Fortunel, G. Kunstler, R. Pélissier, N. Rüger, and I. Maréchaux.* 2024. Beyond variance: simple random distributions are not a good proxy for intraspecific variability in systems with environmental structure. /Peer Community in Ecology/. {{{doi(10.1101/2022.08.06.503032)}}}. /bioRxiv/: [[doi:10.1101/2022.08.06.503032][503032]]. {{{pdf(Girard-Tercieux2024-PCJournal.pdf)}}}
+*Girard-Tercieux C., G. Vieilledent, A. T. Clark, J. S. Clark, B. Courbaud, C. Fortunel, G. Kunstler, R. Pélissier, N. Rüger, and I. Maréchaux.* 2024. Beyond variance: simple random distributions are not a good proxy for intraspecific variability in systems with environmental structure. /Peer Community Journal/, section Ecology. *4*:e28. {{{doi(10.24072/pcjournal.360)}}} /bioRxiv/: [[doi:10.1101/2022.08.06.503032][503032]]. {{{pdf(Girard-Tercieux2024-PCJournal.pdf)}}}, Supplementary materials {{{supp(Girard-Tercieux2024-PCJournal-SM.pdf)}}} {{{altm(10.24072/pcjournal.360)}}}
 
 *Barbier, M.* 2024. Two paradigms for intraspecific variability. /Peer Community in Ecology/, 100466. {{{doi(10.24072/pci.ecology.100466)}}}.
 
