--- a/org/pages/publications.org
+++ b/org/pages/publications.org
@@ -74,7 +74,7 @@
 
 [51]. *Yang, H., Wang, S., Son, R., Lee, H., Benson, V., Zhang, W., Zhang, Y., Zhang, Y., Kattge, J., Boenisch, G., Schepaschenko, D., Karaszewski, Z., Stereńczak, K., Moreno-­Martínez, Á., Nabais, C., Birnbaum, P., Vieilledent, G., Weber, U., and Carvalhais, N.* 2024. Global patterns of tree wood density. /Global Change Biology/. *30*:e17224. {{{doi(10.1111/gcb.17224)}}}. {{{pdf(Yang2024-GCB.pdf)}}}, Supplementary materials {{{supp(Yang2024-GCB-SM.pdf)}}} {{{altm(10.1111/gcb.17224)}}}
 
-[50]. *Girard-Tercieux C., G. Vieilledent, A. T. Clark, J. S. Clark, B. Courbaud, C. Fortunel, G. Kunstler, R. Pélissier, N. Rüger, and I. Maréchaux.* 2024. Beyond variance: simple random distributions are not a good proxy for intraspecific variability in systems with environmental structure. /Peer Community Journal/. /bioRxiv/: [[doi:10.1101/2022.08.06.503032][503032]]. {{{pdf_url(https://www.biorxiv.org/content/10.1101/2022.08.06.503032v5.full.pdf)}}}, Supplementary materials {{{supp_url(https://www.biorxiv.org/content/biorxiv/early/2024/01/14/2022.08.06.503032/DC1/embed/media-1.pdf)}}} {{{altm(10.1101/2022.08.06.503032)}}}
+[50]. *Girard-Tercieux C., G. Vieilledent, A. T. Clark, J. S. Clark, B. Courbaud, C. Fortunel, G. Kunstler, R. Pélissier, N. Rüger, and I. Maréchaux.* 2024. Beyond variance: simple random distributions are not a good proxy for intraspecific variability in systems with environmental structure. /Peer Community Journal/, section Ecology. *4*:e28. {{{doi(10.24072/pcjournal.360)}}} /bioRxiv/: [[doi:10.1101/2022.08.06.503032][503032]]. {{{pdf(Girard-Tercieux2024-PCJournal.pdf)}}}, Supplementary materials {{{supp(Girard-Tercieux2024-PCJournal-SM.pdf)}}} {{{altm(10.24072/pcjournal.360)}}}
 
 [49]. *Justeau-Allaire D., T. Ibanez, G. Vieilledent, X. Lorca, and P. Birnbaum.* 2024. Refining intra-patch connectivity measures in landscape fragmentation and connectivity indices. /Landscape Ecology/. *39*, 24. {{{doi(10.1007/s10980-024-01840-0)}}}. {{{pdf(Justeau-Allaire2024-LandscapeEcology.pdf)}}} {{{altm(10.1007/s10980-024-01840-0)}}}
 
